--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
-  "require": {
-    "phpunit/phpunit": "5.7.*"
+  "require-dev": {
+    "phpunit/phpunit": "5.7.*",
+    "guzzlehttp/guzzle": "^6.3",
+    "behat/behat": "^3.4",
+    "mockery/mockery": "^1.0"
   }
 }
